--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    background: #081b29;
+   
     color:#ededed;
 
 }
@@ -51,6 +51,9 @@ body{
 
 .home{
     height: 100vh;
+    background: url('../Portafolio/home.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     padding: 0 10%;
@@ -64,6 +67,7 @@ body{
 .home-content h1{
     font-size: 56px;
     font-weight: 700;
+    line-height: 1.2;
 
 }
 .home-content h3{
@@ -74,6 +78,9 @@ body{
 }
 .home-content p {
     font-size: 16px;
+    margin: 20px 0 40px;
+    
+
     
     
 }
@@ -86,10 +93,11 @@ body{
 }
 
 .btn-box a{
+    position: relative;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 150;
+    width: 150px;
     height: 100%;
     background: #00abf0;
     border: 2px solid #00abf0;
@@ -99,11 +107,91 @@ body{
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
 
 
+}
+
+.btn-box a:hover{
+    color: #00abf0;
 }
 
 .btn-box a:nth-child(2){
     background: transparent;
     color: #00abf0;
+}
+.btn-box a:nth-child(2):hover{
+    
+    color: #081b29;
+}
+
+.btn-box a:nth-child(2)::before{
+    background: #00abf0;
+    
+}
+
+.btn-box a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height:100% ;
+    background: #081b29;
+    z-index: -1;
+    transition: .5s;
+
+}
+
+.btn-box a:hover::before{
+    width: 100%;
+
+}
+
+.home-sci{
+    position:absolute;
+    bottom: 40px;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home-sci a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #00abf0;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #00abf0;
+    text-decoration: none;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+
+
+}
+.home-sci a:hover{
+    color: #081b29;
+}
+
+.home-sci a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #00abf0;
+    z-index: -1;
+    transition: .5s;
+}
+.home-sci a:hover::before{
+    width: 100%;
 }
