--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 
-{
+*{
 
  margin: 0;
  padding: 0;
@@ -11,7 +11,7 @@
 }
 
 body{
-   
+   background-color: #081b29;
     color:#ededed;
 
 }
@@ -52,8 +52,8 @@ body{
 .home{
     height: 100vh;
     background: url('../Portafolio/home.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size:cover;
+    background-position:center;
     display: flex;
     align-items: center;
     padding: 0 10%;
