--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body{
 
 .home{
     height: 100vh;
+    background: url('Portafolio\home.jpg') no-repeat;
     background: url('../home.jpg') no-repeat;
     background-size:cover;
     background-position:center;
