--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
 .home{
     height: 100vh;
     background: url('./home.jpg') no-repeat;
-    background: url('../home.jpg') no-repeat;
+   /* background: url('../home.jpg') no-repeat;*/
     background-size:cover;
     background-position:center;
     display: flex;
